fixing ugly gap

--- a/main.css
+++ b/main.css
@@ -56,7 +56,8 @@ header > h1{
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    height: 1.5em
+    height: 1.5em;
+    margin: 0;
 }
 
 /* BUTTONS FOR ARTICLES */
@@ -136,7 +137,7 @@ header > h1{
 /* ARTICLES */
 
 .section-background{
-    background-color: darkgoldenrod;
+    background-color: linear-gradient(90deg,#ddd,#fff);
     z-index: -1;
     opacity: 0%;
     position: fixed;
@@ -164,7 +165,7 @@ header > h1{
     margin-bottom: .5px;
     bottom: 0;
     text-align: center;
-    min-height: 100vh;
+    min-height: 99.5vh;
 }
 
 .article-back-waves{
@@ -182,13 +183,13 @@ header > h1{
     width: 100vw;
     max-width: 800px;
     height: auto;
-    min-height: calc(100vh + 0.35%);
+    min-height: 100%;
     margin-top: 50px;
 }
 
 @keyframes backgroundarticlefadein{
     from { opacity: 0;}
-    to {opacity: 0.5;}
+    to {opacity: 1;}
 }
 
 .animationbbgfadein{
@@ -198,7 +199,7 @@ header > h1{
 }
 
 @keyframes backgroundarticlefadeout{
-    from { opacity: 0.5;}
+    from { opacity: 1;}
     to {opacity: 0;}
 }
 
@@ -215,11 +216,12 @@ header > h1{
     height: 95vh; /* Set the desired height */
     overflow: auto;
     margin: 0;
+    margin-top: -24px;
   }
 
 .center {
     display: grid;
-    align-items:self-start;
+    align-items:flex-start;
     justify-items: center;
     margin: 0;
 }
